--- a/backend/Million.Infrastructure/Million.Infrastructure.csproj
+++ b/backend/Million.Infrastructure/Million.Infrastructure.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Million.Core\Million.Core.csproj" />
+  </ItemGroup>
+
 </Project>
