conexión con docker y actualización de la documentación con los cambios solicitados

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,7 @@ COPY ["Million.Api/Million.Api.csproj", "Million.Api/"]
 COPY ["Million.Core/Million.Core.csproj", "Million.Core/"]
 COPY ["Million.Infrastructure/Million.Infrastructure.csproj", "Million.Infrastructure/"]
 COPY ["Million.Application/Million.Application.csproj", "Million.Application/"]
+COPY ["Million.Tests/Million.Tests.csproj", "Million.Tests/"]
 
 # Restaurar dependencias
 RUN dotnet restore "Million.sln"
@@ -17,7 +18,6 @@ COPY . .
 
 # Construir y publicar
 WORKDIR "/src/Million.Api"
-RUN dotnet build "Million.Api.csproj" -c Release -o /app/build
 RUN dotnet publish "Million.Api.csproj" -c Release -o /app/publish
 
 # Stage 2: Runtime
@@ -27,8 +27,6 @@ WORKDIR /app
 # Copiar los archivos publicados
 COPY --from=build /app/publish .
 
-# Exponer el puerto
 EXPOSE 80
 
-# Comando de entrada
 ENTRYPOINT ["dotnet", "Million.Api.dll"]
