--- a/backend/Million.Api/appsettings.json
+++ b/backend/Million.Api/appsettings.json
@@ -2,12 +2,14 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.Hosting.Diagnostics": "Warning",
+      "Microsoft.AspNetCore.HttpsPolicy.HttpsRedirectionMiddleware": "Error"
     }
   },
   "AllowedHosts": "*",
   "MongoDbSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://mongodb:27017",
     "DatabaseName": "milliondb",
     "PropertiesCollectionName": "properties"
   }
