--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,55 +1,33 @@
-version: '3.8'
-
 services:
-  mongodb:
-    image: mongo:7.0
-    container_name: million-mongo
-    restart: unless-stopped
-    ports:
-      - "27017:27017"
-    environment:
-      MONGO_INITDB_DATABASE: milliondb
-    volumes:
-      - mongo-data:/data/db
-      - ./seed:/docker-entrypoint-initdb.d
-    networks:
-      - million-network
-
   api:
+    container_name: million-api
     build:
       context: ./backend
       dockerfile: Dockerfile
-    container_name: million-api
-    restart: unless-stopped
     ports:
       - "5000:80"
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - MongoDbSettings__ConnectionString=mongodb://mongodb:27017
-      - MongoDbSettings__DatabaseName=milliondb
     depends_on:
-      - mongodb
-    networks:
-      - million-network
+      mongodb:
+        condition: service_healthy
+    environment:
+      ASPNETCORE_ENVIRONMENT: Development
+      ASPNETCORE_URLS: "http://+:80"
+    restart: on-failure
 
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    container_name: million-frontend
-    restart: unless-stopped
+  mongodb:
+    container_name: million-mongodb
+    image: mongo:7
+    restart: always
     ports:
-      - "3000:80"
-    environment:
-      - VITE_API_BASE_URL=http://localhost:5000/api
-    depends_on:
-      - api
-    networks:
-      - million-network
+      - "27017:27017"
+    volumes:
+      - mongodb_data:/data/db
+    healthcheck:
+      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 40s
 
 volumes:
-  mongo-data:
-
-networks:
-  million-network:
-    driver: bridge
+  mongodb_data:
